SERVER-77667: Prevent mongos from starting new transactions at shutdown (#17886)

GitOrigin-RevId: 9d3e5e69b0623a89e357e2ed0967b9011ca8f74c